# led-fury

./: .gitignore  README.md  SequenceMan.py  __main__.py  pyproject.toml  sample.fury  udp_sender.py
app/: app.py  encoder.py  file_system.py  handler.py  json.py
handlers/: geometry.py  investigate.py  main.py  overall.py  pattern.py  sequence.py  single.py  websocket.py
logic/: color.py  math.py  patterns.py  time.py
logic/geometry/: calculate.py  cursor.py
logic/patterns/: GifPattern.py  PointPattern.py  __init__.py  edits.py  instance.py  pattern.py  state.py  template.py
logic/patterns/templates/: GifPattern.py  PointPattern.py
model/: geometry.py  obsolete.py  setup.py  state.py  utils.py
service/: Investigator.py  RunState.py  SequenceMan.py  UdpSender.py  sequence_run.py
template/: index.html
tests/: json.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: index.jsx
ui/src/api/: api.js  apiHooks.js  usePendingState.jsx  useSelectorOptions.js  useWebSocket.js
ui/src/components/: ActionButtonRow.jsx  ActionButtons.jsx  Checkbox.jsx  ControlButtons.jsx  DebugConsole.jsx  DragNumberInput.jsx  EditRow.jsx  Header.jsx  LiveView.jsx  Loader.jsx  OptionSelector.js  PatternEditor.jsx  SpinNumberInput.jsx
ui/src/pages/: Editor.jsx
ui/src/pattern/: ColorChooseRows.jsx  PatternEditor.jsx  PatternSelector.jsx
ui/src/sections/: ControlBar.jsx  ControlButtons.jsx  DebugConsole.jsx  EditSegments.jsx  ErrorBoundary.js  ErrorBoundary.jsx  Header.jsx  LiveInfos.jsx  LiveView.jsx  MainEditor.jsx  (+2 more)
(+21 files in other folders)
