[tool.poetry]
name = "led-fury"
version = "0.1.0"
description = ""
authors = ["qm210 <quantenmace@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tornado =  "^6.4.2"
numpy = "^2.2.1"
pillow = "^11.1.0"
opencv-python = "^4.11.0.86"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
